@@ -222,8 +222,6 @@ Porque se queda la ultima direccion mwa escrita de ese opcode
 -en daad debug, pulsar m de condmessage, sale dos veces (con cozumel 1 y inventario)
 
 
--assemble: ld hl,(68H) no interpreta el 68H como hexadecimal
-
 -Ítems de menú que solo aparezcan en modo avanzado
 
 -Icono de aplicación que se vea distinto si la aplicación está abierta 
