@@ -36,6 +36,7 @@ Improved ZX Vision:
 
 Fixed +3 disk (and CPC6128?) (PD765) emulation: TODO: add more details here
 Fixed pause: can now return when pressing mouse button too
+Fixed assembler parsing expressions (NN) and NN is an hexadecimal number
 
 
 * As always, there are some other minor bugfixes and improvements
